<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_inicio" android:icon="@drawable/ic_home" android:title="@string/inicio" />
        <item android:id="@+id/nav_entrada" android:icon="@drawable/ic_edit" android:title="@string/sec1" />
        <item android:id="@+id/nav_botones" android:icon="@drawable/ic_touch" android:title="@string/sec2" />
        <item android:id="@+id/nav_seleccion" android:icon="@drawable/ic_check_box" android:title="@string/sec3" />
        <item android:id="@+id/nav_listas" android:icon="@drawable/ic_list" android:title="@string/sec4" />
        <item android:id="@+id/nav_informacion" android:icon="@drawable/ic_info" android:title="@string/sec5" />
        <item android:id="@+id/nav_contenedores" android:icon="@drawable/ic_dashboard" android:title="@string/sec6" />
    </group>
</menu>
